fixing margin to align tech stack under about text

--- a/style.css
+++ b/style.css
@@ -181,9 +181,11 @@ header {
 
 /* Tech Stack Styling */
 .tech-stack {
-    margin-bottom: 80px;
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: 80px;
     max-width: 500px;
-    margin: 0;
 }
 
 /* Project Cards Styling */
